# pymodaq_plugins_beamtracker

./: README.rst  pyproject.toml
src/pymodaq_plugins_beamtracker/app/: beam_tracker.py  beam_tracker_1.py  beam_tracker_2.py  focal_spot_profiler.py
src/pymodaq_plugins_beamtracker/app/resources/: config_template.toml  config_template_2cams.toml
src/pymodaq_plugins_beamtracker/daq_viewer_plugins/plugins_0D/: daq_0Dviewer_DataMixer.py
src/pymodaq_plugins_beamtracker/extensions/utils/: model.py
src/pymodaq_plugins_beamtracker/models/: fit_model.py
src/pymodaq_plugins_beamtracker/resources/: config_template.toml
tests/: test_formula_parser.py
